--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,6 +96,16 @@
               {% endfor -%}
               {%- if site.enable_darkmode %}
 
+              <li class="nav-item">
+                <a
+                  target="_blank"
+                  class="nav-link"
+                  href="/assets/pdf/cv.pdf"
+                  >CV</a
+                >
+              </li>
+              
+
               <!-- Toogle theme mode -->
               <li class="toggle-container">
                 <button id="light-toggle" title="Change theme">
